[package]
name = "esp-rust-pwm-ledc"
version = "0.1.0"
authors = ["Bart Karalus <bart@bforge.co>"]
edition = "2021"
resolver = "2"
rust-version = "1.76"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.34" }
esp-idf-hal = "0.43.1"
anyhow = "1"
rand = "0.8.5"

# [patch.crates-io]
# proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2", rev = "4ba4ab1ec52d9e8286826a898430683ba002a002" }

[build-dependencies]
embuild = "0.31.3"

